--- a/lamoon-frontend/src/assets/css/App.css
+++ b/lamoon-frontend/src/assets/css/App.css
@@ -1,6 +1,26 @@
 .application-name {
-  font-family: "Oleo Script", cursive;
-  font-size: 2rem;
-  color: white;
-  margin-left: 0.6rem;
+    font-family: "Oleo Script", cursive;
+    font-size: 2rem;
+    color: white;
+    margin-left: 0.6rem;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
 }
