--- a/lamoon-frontend/src/assets/css/index.css
+++ b/lamoon-frontend/src/assets/css/index.css
@@ -1,142 +1,240 @@
 :root {
-  --textLight: #cca9a6;
-  --textMain: #ad7571;
-  --paper: #ffdac1;
-  --paperLight: #fff0e6;
-  --layout: #ffffff;
-  --appBar: #4d5789;
-  --appBarHover: #3e487a;
+    --textLight: #cca9a6;
+    --textMain: #ad7571;
+    --paper: #ffdac1;
+    --paperLight: #fff0e6;
+    --layout: #ffffff;
+    --appBar: #4d5789;
+    --appBarHover: #3e487a;
+}
+
+#root {
+    overflow-x: hidden;
+}
+
+th {
+    font-weight: 500;
 }
 
 body {
-  margin: 0;
-  font-family: "Nunito", "Mitr", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--paper);
-  color: var(--textMain);
+    margin: 0;
+    font-family: "Nunito", "Mitr", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: var(--paper);
+    color: var(--textMain);
 }
 
 .layout {
-  background-color: var(--layout);
-  overflow-y: scroll;
+    background-color: var(--layout);
+    overflow-y: auto;
+}
+
+.paper {
+    background-color: var(--layout);
 }
 
 .label {
-  font-size: 20px;
-  margin-bottom: 8px;
+    font-size: 20px;
+    margin-bottom: 8px;
 }
 
 .relative {
-  position: relative;
+    position: relative;
 }
 
 .management-layout {
-  padding: 16px;
-  font-size: 16px;
-  display: flex;
+    padding: 16px;
+    font-size: 16px;
+    display: flex;
 }
 
 .report-box {
-  height: 60px;
-  font-family: "Nunito", "Mitr";
-  font-size: 20px;
-  padding: 0px 16px;
-  transition: 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid var(--textLight);
+    height: 60px;
+    font-family: "Nunito", "Mitr";
+    font-size: 20px;
+    padding: 0px 16px;
+    transition: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--textLight);
 }
 
 .report-box:hover {
-  background-color: var(--paperLight);
+    background-color: var(--paperLight);
 }
 
-.report-footer {
-  display: flex;
+.d-flex {
+    display: flex;
 }
 
 .icon-button {
-  width: 35px;
-  height: 35px;
-  opacity: 0.8;
-  transition: 0.3s;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  border: none;
-  color: var(--layout);
+    width: 35px;
+    height: 35px;
+    opacity: 0.8;
+    transition: 0.3s;
+    border-radius: 50%;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    border: none;
+    color: var(--layout);
 }
 
 .icon-button:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .add-button {
-  width: 70px;
-  height: 70px;
-  transition: 0.2s;
-  border-radius: 50%;
-  right: 12px;
-  bottom: 12px;
-  position: absolute;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--layout);
-  background-color: var(--appBar);
+    width: 70px;
+    height: 70px;
+    transition: 0.2s;
+    border-radius: 50%;
+    cursor: pointer;
+    right: 12px;
+    bottom: 12px;
+    position: absolute;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--layout);
+    background-color: var(--appBar);
 }
 
 .add-button:hover {
-  background-color: var(--appBarHover);
+    background-color: var(--appBarHover);
 }
 
 .margin-right-2 {
-  margin-right: 16px;
+    margin-right: 16px;
 }
 
 .title {
-  padding: 6px 12px;
-  font-size: 28px;
+    padding: 6px 12px;
+    font-size: 28px;
 }
 
 .table-head {
-  padding: 6px 12px;
-  border: 1px solid var(--textLight);
-  background-color: var(--paperLight);
-  color: var(--textLight);
-  font-size: 18px;
-  display: flex;
-  align-items: center;
-  align-content: center;
+    padding: 6px 12px;
+    border: 1px solid var(--textLight);
+    background-color: var(--paperLight);
+    color: var(--textLight);
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    align-content: center;
 }
 
 .table-row {
-  padding: 12px 16px;
-  border-bottom: 1px solid var(--textLight);
-  font-size: 24px;
-  display: flex;
-  align-content: center;
-  transition: 0.3s;
+    padding: 12px 16px;
+    border-bottom: 1px solid var(--textLight);
+    font-size: 24px;
+    display: flex;
+    align-content: center;
+    transition: 0.3s;
 }
 
 .table-row:hover {
-  background-color: var(--paperLight);
+    background-color: var(--paperLight);
 }
 
 .textfield {
-  width: 100%;
-  transition: 0.3s;
-  border: 1px solid var(--textLight);
-  border-radius: 4px;
-  padding: 12px;
-  font-size: 20px;
-  font-family: inherit;
-  color: var(--textMain);
+    width: 100%;
+    transition: 0.3s;
+    border: 1px solid var(--textLight);
+    border-radius: 4px;
+    padding: 12px;
+    font-size: 20px;
+    font-family: inherit;
+    color: var(--textMain);
 }
 
 .textfield:focus {
-  outline: 1px solid var(--textMain);
+    outline: 1px solid var(--textMain);
+}
+
+.table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.th {
+    font-size: 18px;
+    background-color: var(--paperLight);
+    color: var(--textLight);
+    border-top: var(--textLight) 1px solid;
+    border-bottom: var(--textLight) 1px solid;
+    padding: 6px 12px;
+}
+
+.tr {
+    border-bottom: 1px solid var(--textLight);
+    font-size: 24px;
+    transition: 0.2s;
+}
+
+.active {
+    background-color: var(--paperLight);
+}
+
+.td {
+    padding: 12px 16px;
+    background-color: transparent;
+}
+
+.menu-column {
+    align-items: center;
+}
+
+.ml-05 {
+    margin-left: 0.5rem;
+}
+
+.fw-600 {
+    font-weight: 600;
+}
+
+.x-hidden {
+    overflow-x: hidden !important;
+}
+
+.each-menu {
+    max-width: 120px;
+    min-width: 80px;
+    width: fit-content;
+    padding: 6px 0px !important;
+}
+
+.each-row {
+    max-width: 120px;
+    min-width: 80px;
+    width: fit-content;
+    padding: 10px 0px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.add-order {
+    padding: 1px;
+    margin-left: 8px;
+    height: 30px;
+    border-radius: 4px;
+    border: var(--textMain) 1.5px solid;
+    color: var(--textMain);
+    background-color: var(--paperLight);
+    cursor: pointer;
+    opacity: 0.75;
+    transition: 0.4s;
+}
+
+.add-order:hover {
+    opacity: 1;
 }
